# algo-speed-comparison

./: .gitignore  README.md  bresenham_line_comparison.py  build.sh  end_points.txt  end_points_int.txt  generate_line_data.py  requirements.txt  start_points.txt  start_points_int.txt
bresenham_line/: CMakeLists.txt  bresemham_line.cpp  bresemham_line.h  bresemham_line_sample.cpp  cython_version.c  cython_version.pyx  numba_version.py  py_wrapper.cpp  python_version.py  setup.py
bresenham_line/c++/: CMakeLists.txt  bresemham_line.cpp  bresemham_line_sample.cpp  py_wrapper.cpp
bresenham_line/cython/: line_rasterization.c  setup.py
bresenham_line/numba/: line_rasterization.py
bresenham_line/scikit_image/: line_rasterization.py
data/: end_points.txt  end_points_int.txt  start_points.txt  start_points_int.txt
